# AI_Resume_Screening

./: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOY.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/api/: __init__.py
app/api/endpoints/: candidates.py  filters.py  resumes.py
app/core/: config.py  logging_config.py
app/crud/: __init__.py  candidate.py  resume.py
app/db/: database.py  init_db.py
app/models/: __init__.py  candidate.py  resume.py
app/schemas/: __init__.py  candidate.py
app/services/: __init__.py  document_parser.py  file_service.py  llm_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/Candidates/: CandidatesList.tsx
frontend/src/components/Common/: AdvancedSearch.tsx  ModernLoading.tsx  NotificationManager.tsx  PDFPreview.tsx  ProgressIndicator.tsx  ResponsiveMenu.tsx  StatsCard.tsx  StatusBadge.tsx
frontend/src/components/Filters/: FilterPanel.tsx
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/components/Upload/: UploadResumes.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useResponsive.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: complete_system_test.py  create_test_pdf.py  test_llm_logging.py  view_logs.py
